Bug 92076 - FILESAVE: Curved shapes not exported to OOXML
Summary: FILESAVE: Curved shapes not exported to OOXML
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords: filter:docx, filter:ooxml, filter:pptx, filter:xlsx
: 80226 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-15 02:43 UTC by Luke
Modified: 2020-08-19 14:28 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample of some curved shapes not exported (11.43 KB, application/vnd.oasis.opendocument.presentation)
2015-06-15 02:43 UTC, Luke
Details
Sample file exported by PowerPoint (40.88 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2015-06-15 02:44 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-06-15 02:43:07 UTC
Created attachment 116540 [details]
Sample of some curved shapes not exported

Steps to reproduce:
1. In Impress, Draw, or Writer add a curved shape
2. Double click to finish drawing points
3. Save as PPTX or DOCX
4. Open in Impress/Powerpoint or Word/Writer
Comment 1 Luke 2015-06-15 02:44:09 UTC
Created attachment 116541 [details]
Sample file exported by PowerPoint
Comment 2 Buovjaga 2015-06-17 06:27:03 UTC
Repro with attachment 116540 [details].

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 80ec99db4325a439a8a3f1d420d0a80f8bf9c439
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-06-16_00:00:20
Locale: fi-FI (fi_FI)
Comment 3 Luke 2015-06-17 10:41:06 UTC
Adding Andras whose been improving the DrawingML export filters.
Comment 4 Luke 2016-11-20 05:51:55 UTC
Looks like our commit notification bot is down. Fixed by Mark Hung with

https://cgit.freedesktop.org/libreoffice/core/commit/?id=afc37372c1e1e8a865a4ad91a4b998e861ad9f02


Exported files now open correctly in both Impress and PowerPoint. Thanks Mark for tracking down this issue!

Verified on Version: 5.3.0.0.alpha1+
Build ID: 92c1128fb80b4e38df219ce60f018cfb1522b20a
Comment 5 Timur 2016-11-28 09:51:15 UTC
*** Bug 80226 has been marked as a duplicate of this bug. ***