tdf#92076 oox - export PolyPolygonShape and PolyLineShape.

1. Export PolyPolygonShape and PolyLineShape.
2. Rename WriteBezierShape to WritePolyPolygonShape because
ClosedBezierShape, OpenBezierShape, PolyPolygonShape,and
PolyLineShape share the function and all use
EscherPropertyContainer::GetPolyPolygon to get PolyPolygon
structure and use WritePolyPolygon to write xml tags.

Change-Id: I9ffdc26cf1f6fe8ea3b91b7b218d67f9e5585617